<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LungFit</string>
    <string name="screen_1">1</string>
    <string name="screen_2">2</string>
    <string name="screen_3">3</string>
    <string name="screen_4">4</string>
    <string name="screen_5">5</string>
    <string name="screen_6">6</string>
    <string name="screen_7">7</string>
    <string name="screen_8">8</string>
    <string name="get_started_button">Start</string>
    <string name="start_message_string">LungFIT\nis a\nstep-by-step\ntool to help you\nexercise safely\n and effectively</string>
    <string name="splash_screen_logo">Splash screen logo</string>
    
    <string name="general_information_tab">General Information</string>
	<string name="measurements_at_rest_tab">Measurements at Rest</string>
	<string name="exercise_plan_tab">Exercise Plan</string>
	<string name="contact_information_tab">Contact Information</string>
	
 	<string name="user_settings">User Settings</string>
</resources>