<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    android:orientation="vertical"
    tools:context=".StartActivity" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >

        <TableRow tools:ignore="UselessParent" >

            <TextView
                style="@style/DigitTabs"
                android:text="@string/screen_1"
                android:textStyle="bold" />

            <TextView
                style="@style/DigitTabs"
                android:text="@string/screen_2" />

            <TextView
                style="@style/DigitTabs"
                android:text="@string/screen_3" />

            <TextView
                style="@style/DigitTabs"
                android:text="@string/screen_4" />

            <TextView
                style="@style/DigitTabs"
                android:text="@string/screen_5" />

            <TextView
                style="@style/DigitTabs"
                android:text="@string/screen_6" />

            <TextView
                style="@style/DigitTabs"
                android:text="@string/screen_7" />

            <TextView
                style="@style/DigitTabs"
                android:text="@string/screen_8" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/start_message"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:keepScreenOn="true"
            android:text="Hello &lt;username>" 
            android:textSize="30sp"/>

        <ImageButton
            android:id="@+id/edit_user_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:src="@drawable/person" />
    </LinearLayout>

    <TextView
        android:id="@+id/start_message"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/start_message_string"
        android:textSize="50sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >

            <Button
                android:id="@+id/get_started_button"
                style="?buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/get_started_button" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>