<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".OximeterConnectActivity" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1" >

        <TableRow tools:ignore="UselessParent" >

            <TextView
                style="@style/DigitTabs"
                android:text="@string/screen_1" />

            <TextView
                style="@style/DigitTabs"
                android:text="@string/screen_2" />

            <TextView
                style="@style/DigitTabs"
                android:text="@string/screen_3"
                android:textStyle="bold" />

            <TextView
                style="@style/DigitTabs"
                android:text="@string/screen_4" />

            <TextView
                style="@style/DigitTabs"
                android:text="@string/screen_5" />

            <TextView
                style="@style/DigitTabs"
                android:text="@string/screen_6" />

            <TextView
                style="@style/DigitTabs"
                android:text="@string/screen_7" />

            <TextView
                style="@style/DigitTabs"
                android:text="@string/screen_8" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="Oximeter connect"
        android:textSize="50sp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >

            <Button
                android:id="@+id/next_button"
                style="?buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Next" />
        </LinearLayout>
    </FrameLayout>

</FrameLayout>