<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    android:orientation="vertical"
    tools:context=".ExerciseActivity" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >

        <TableRow tools:ignore="UselessParent" >

            <TextView
                style="@style/DigitTabs"
                android:text="@string/screen_1" />

            <TextView
                style="@style/DigitTabs"
                android:text="@string/screen_2" />

            <TextView
                style="@style/DigitTabs"
                android:text="@string/screen_3" />

            <TextView
                style="@style/DigitTabs"
                android:text="@string/screen_4" />

            <TextView
                style="@style/DigitTabs"
                android:text="@string/screen_5" />

            <TextView
                style="@style/DigitTabs"
                android:text="@string/screen_6"
                android:textStyle="bold" />

            <TextView
                style="@style/DigitTabs"
                android:text="@string/screen_7" />

            <TextView
                style="@style/DigitTabs"
                android:text="@string/screen_8" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/SatStat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <TableLayout
            android:id="@+id/SatTable1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1,3,5,7" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left" >

                <TextView
                    android:text="Lat. :"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/SatLat"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left" >

                <TextView
                    android:text="Lon. :"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/SatLon"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left" >

                <TextView
                    android:text="Alt. :"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/SatAlt"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >

            <Button
                android:id="@+id/start_exercise_button"
                style="?buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Start Exercise" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>